[package]
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"
name = "ya-exe-unit"
version = "0.4.0"

[lib]
name = "ya_exe_unit"
path = "src/lib.rs"

[[bin]]
name = "exe-unit"
path = "src/bin.rs"

[features]
compat-deployment = []
default = ['compat-deployment']
packet-trace-enable = ["ya-packet-trace/enable"]
sgx = [
  'graphene-sgx',
  'openssl/vendored',
  'secp256k1/rand',
  'ya-client-model/sgx',
  'ya-core-model/sgx',
  'ya-transfer/sgx',
]
framework-test = []

[dependencies]
ya-agreement-utils = {workspace = true}
ya-client-model.workspace = true
ya-compile-time-utils.workspace = true
ya-core-model = {workspace = true, features = ["activity", "appkey"]}
ya-counters = {path = "./components/counters", features = ["os"]}
ya-gsb-http-proxy = {path = "../exe-unit/components/gsb-http-proxy"}
ya-manifest-utils.workspace = true
ya-packet-trace = {git = "https://github.com/golemfactory/ya-packet-trace"}
ya-runtime-api = {version = "0.7", path = "runtime-api", features = [
  "server",
]}
ya-service-bus = {workspace = true}
ya-std-utils.workspace = true
ya-transfer.path = "components/transfer"
ya-utils-futures.workspace = true
ya-utils-networking = { workspace = true, default-features = false, features = [
    "dns",
    "vpn",
] }
ya-utils-process.workspace = true
ya-utils-path.workspace =  true



actix = {version = "0.13", default-features = false}
actix-rt = "2.7"
anyhow = "1.0"
async-trait = "0.1.24"
bytes = "1"
chrono = "0.4"
derivative = "2.1"
derive_more = {workspace = true}
dotenv = "0.15.0"
flexi_logger = {version = "0.22", features = ["colors"]}
futures = "0.3"
graphene-sgx = {version = "0.3.3", optional = true}
hex = "0.4.2"
ipnet = "2.3"
lazy_static = "1.4.0"
log = "0.4"
openssl = {workspace = true, optional = true}
rand = "0.8.5"
regex = "1.5"
reqwest = {version = "0.11", optional = false, features = ["stream"]}
secp256k1 = {version = "0.27.0", optional = true}
serde = {version = "^1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.8"
sha3 = "0.8.2"
signal-hook = "0.3"
socket2 = "0.4"
structopt = "0.3"
thiserror = "1.0"
# keep the "rt-multi-thread" feature
async-stream = "0.3.5"
tokio = {version = "1", features = [
  "process",
  "signal",
  "time",
  "net",
  "rt-multi-thread",
]}
tokio-stream = {version = "0.1.8", features = ["io-util", "sync"]}
tokio-util = {version = "0.7.2", features = ["codec", "net"]}
trust-dns-resolver = {workspace = true}
url = "2.1"
yansi = "0.5.0"

[dev-dependencies]
ya-runtime-api = {version = "0.7", path = "runtime-api", features = [
  "codec",
  "server",
]}
ya-sb-router = {workspace = true}

actix-files = "0.6"
actix-web = "4"
env_logger = "0.7"
rustyline = "7.0.0"
serial_test = {git = "https://github.com/tworec/serial_test.git", branch = "actix_rt_test", features = ["actix-rt2"]}
sha3 = "0.8.2"
shell-words = "1.0.0"
tempdir = "0.3.7"
test-context = "0.1.4"

ya-framework-basic.workspace = true
ya-mock-runtime = {path = "components/mock-runtime"}

[lints]
workspace = true
