[package]
name = "golemsp"
description = "User friedly CLI for running provider"
version = "0.1.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"

[dependencies]
ya-compile-time-utils = "0.1"
actix-rt = "1.0"
anyhow = "1.0"
bigdecimal = { version = "0.1.0"}
byte-unit = "4.0"
chrono = { version = "0.4", features=["serde"] }
dotenv = "0.15"
env_logger = "0.7"
futures = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strip-ansi-escapes = "0.1"
structopt = "0.3"
tokio = { version = "0.2", features = ["process", "rt-core", "signal", "time", "io-util", "io-std"] }
url = "2.1"
directories = "2.0.2"
promptly = "0.3.0"
names = "0.10.0"
crossterm="0.18.0"
rustyline="6.3.0"
prettytable-rs = "0.8.0"
ansi_term="0.12.1"

[target.'cfg(target_os = "linux")'.dependencies]
libc="0.2.73"
nix="0.18.0"