[package]
name = "golemsp"
description = "User friedly CLI for running Golem Provider"
version = "0.2.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"

[dependencies]
ya-client = { version = "0.5", features = ['cli'] }
ya-compile-time-utils = "0.2"
ya-core-model = { version = "^0.4", features=["payment", "version"] }
ya-provider = "0.2"
ya-utils-path = "0.1.0"
ya-utils-process = { version = "0.1.0", features = ["lock"] }

actix-rt="1.1"
ansi_term="0.12.1"
anyhow = "1.0"
bigdecimal = "0.2"
byte-unit = "4.0"
chrono = { version = "0.4", features=["serde"] }
crossterm="0.18.0"
directories = "2.0.2"
dotenv = "0.15"
env_logger = "0.7"
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
names = "0.10.0"
prettytable-rs = "0.8.0"
promptly = "0.3.0"
rustyline="6.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strip-ansi-escapes = "0.1"
structopt = "0.3"
strum = "0.20.0"
tokio = { version = "0.2", features = ["process", "rt-core", "signal", "time", "io-util", "io-std"] }
url = "2.1"

[target.'cfg(target_family = "unix")'.dependencies]
libc="0.2.73"
nix="0.22.0"
