[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "goth-tests"
version = "0.1.1"
description = "Integration tests for yagna"
authors = ["GolemFactory <contact@golem.network>"]
license = "LGPL-3.0-or-later"
classifiers = ["Development Status :: 3 - Alpha", "Framework :: AsyncIO"]
repository = "https://github.com/golemfactory/yagna"
documentation = "https://docs.golem.network"
readme = "README.md"

# Uncomment to enable pulling packages from test.pypi.org
# [[tool.poetry.source]]
# name = "testpypi"
# url = "https://test.pypi.org/simple/"
# default = false
# secondary = true

[tool.poetry.dependencies]
python = "^3.10.1,<3.13"
pytest = "^7.4"
pytest-asyncio = "0.21"
pytest-split = "^0.8.1"
#goth = "0.18.1"
# to use development goth version uncomment below
goth = { git = "https://github.com/golemfactory/goth.git", rev = "e0608cc21250fca7ab9f449bde8619b2cc49241e" }

[tool.poetry.dev-dependencies]
black = "21.7b0"
mypy = "^1.5"
poethepoet = "^0.22"

[tool.poe.tasks]
codestyle = "black --check --diff ."
goth-tests = "pytest -W ignore::DeprecationWarning -svx ."
goth-tests-local = ["_build-yagna", "_copy_binaries", "_test_local_build"]
provider-tests = "pytest -svx ./domain/ya-provider"
typecheck = "mypy ."

_build-yagna = "cargo build -j 3 --features require-consent,static-openssl --target x86_64-unknown-linux-musl -p yagna -p ya-exe-unit -p gftp -p golemsp -p ya-provider -p erc20_processor"
_test_local_build = "pytest -W ignore::DeprecationWarning -svx . --config-override docker-compose.build-environment.binary-path=$POE_ROOT/../target/goth/"
_copy_binaries = "./copy_binaries.sh"

[tool.poe]
envfile = [".env"]
shell_interpreter = "bash"