[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "goth-tests"
version = "0.1.1"
description = "Integration tests for yagna"
authors = ["GolemFactory <contact@golem.network>"]
license = "LGPL-3.0-or-later"
classifiers = ["Development Status :: 3 - Alpha", "Framework :: AsyncIO"]
repository = "https://github.com/golemfactory/yagna"
documentation = "https://docs.golem.network"
readme = "README.md"

# Uncomment to enable pulling packages from test.pypi.org
# [[tool.poetry.source]]
# name = "testpypi"
# url = "https://test.pypi.org/simple/"
# default = false
# secondary = true

[tool.poetry.dependencies]
python-dotenv = "^1.1.1"
python = "^3.10.1"
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
pytest-split = "^0.10.0"
#goth = "0.18.1"
# to use development goth version uncomment below
goth = { git = "https://github.com/golemfactory/goth.git", rev = "8b8f7aaee302705859917298129e752dcee06f1f" }

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
mypy = "^1.18"
poethepoet = "^0.37.0"

[tool.poe.tasks]
codestyle = "black --check --diff ."
goth-tests = "pytest -svx ."
provider-tests = "pytest -svx ./domain/ya-provider"
typecheck = "mypy ."
