[package]
name = "ya-batch-requestor"
version = "0.1.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"

[dependencies]
actix = "0.9"
actix-rt = "1.0"
chrono="0.4.10"
futures = "0.3"
indicatif = "0.14.0"
serde_json = "1.0"
tokio = { version = "0.2.10" }
url = "2.1.1"
ya-agreement-utils = "0.1"
ya-client = "0.3"
