[package]
name = "ya-provider"
description = "Yagna Provider Agent reference implementation."
version = "0.2.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "ya-provider"
path = "src/main.rs"

[dependencies]
ya-manifest-utils = { version = "^0.1" }
ya-client = { version = "0.6", features = ['cli'] }
ya-client-model = "0.4"
ya-compile-time-utils = "0.2"
ya-core-model = { version = "^0.6", features = ['activity', 'payment'] }
ya-file-logging = "0.1"
ya-utils-actix = "0.1"
ya-utils-path = "0.1"
ya-utils-process = { version = "0.1", features = ['lock'] }
ya-std-utils = "0.1"
ya-negotiators = { git = "https://github.com/nieznanysprawiciel/ya-negotiator", rev = "9c32969bdcb14ccd18260fb570c68ad44bb95b76" }
ya-agreement-utils = { git = 'https://github.com/nieznanysprawiciel/ya-negotiator', rev = "9c32969bdcb14ccd18260fb570c68ad44bb95b76" }

actix = { version = "0.13", default-features = false }
actix-rt = "2.7"
actix_derive = "0.6"
anyhow = "1.0"
backoff = "0.2.1"
bigdecimal = "0.2"
bytesize = "1.0.1"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99.5"
dialoguer = "0.5.0"
directories = "2.0.2"
dotenv = "0.15.0"
futures = "0.3"
futures-util = "0.3.4"
hex = "0.4"
humantime = "2"
humantime-serde = "1"
lazy_static = "1.4.0"
libc = "0.2"
log = "0.4"
log-derive = "0.4"
notify = "4.0.15"
num_cpus = "1.13.0"
num-traits = "0.2.14"
path-clean = "0.1.0"
regex = "1.5"
semver = { version = "0.11", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
shared_child = "0.3.4"
signal-hook = "0.3"
structopt = "0.3.20"
strum = "0.20"
strum_macros = "0.20"
sys-info = "0.7.0"
thiserror = "1.0.14"
tokio = { version = "1", features = ["process", "signal"] }
tokio-stream = {version = "0.1.6", features = ["sync"] }
url = "2.1.1"
walkdir = "2.3.1"
yansi = "0.5.0"

[target.'cfg(target_family = "unix")'.dependencies]
nix = "0.22.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.8", features = ["fileapi"] }

[dev-dependencies]
chrono = "0.4"
shlex = "1.1.0"
