[package]
name = "ya-requestor-sdk"
version = "0.2.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"

[dependencies]
ya-agreement-utils = "0.1"
ya-client = { version = "0.3", features = ["sgx"] }

actix = "0.9"
actix-rt = "1.0"
anyhow = "1.0.28"
bigdecimal = "0.1.0"
chrono="0.4.10"
dotenv = "0.15.0"
futures = "0.3"
gftp = "0.1"
log = "0.4"
secp256k1 = "0.15"
semver = "0.10.0"
serde_json = "1.0"
sha3 = "0.9.1"
tokio = { version = "0.2.10", features = ["fs"] }
url = "2.1.1"

[dev-dependencies]
env_logger = "0.6"
structopt = "0.3"
