[package]
name = "ya-requestor"
version = "0.1.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"

[dependencies]
ya-client="0.1"
ya-model = "0.1"
actix-rt = "1.0"
env_logger = "0.7"
anyhow = "1.0.26"
structopt = "0.3.8"
serde_json="1.0"
dotenv="0.15.0"
url = "2.1.1"
tokio = { version = "0.2.10", features=["signal"] }