[package]
name = "ya-requestor"
description = """Sample Yagna Requesor Agent implemntation.
Accepts all proposals, processes single Agreement and single Activity, accepts the Invoice.
"""
version = "0.1.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"

[dependencies]
ya-agreement-utils = "0.1"
ya-client = { version = "0.3", features = ["cli"] }
ya-compile-time-utils = "0.1"

actix-rt = "1.0"
anyhow = "1.0.26"
chrono = "0.4.10"
dotenv = "0.15.0"
env_logger = "0.7"
futures = "0.3"
humantime = "2.0.0"
log = "0.4.8"
serde_json = "1.0"
structopt = "0.3.8"
tokio = { version = "0.2.10", features = ["signal"] }
url = "2.1.1"
uuid = "0.8.1"
