[package]
name = "ya-activity"
version = "0.2.1"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"

[dependencies]
ya-core-model = { version = "0.1", features = ["activity", "market"] }
ya-client-model = "0.1"
ya-net = "0.1"
ya-service-api = "0.1"
ya-service-api-interfaces = "0.1"
ya-service-api-web = "0.1"
ya-service-bus = "0.2"
ya-persistence = "0.2"

actix-web = "2.0"
actix-rt = "1.0"
anyhow = "1.0"
chrono = "0.4"
diesel = { version = "1.4", features = ["chrono", "sqlite", "r2d2"] }
env_logger = "0.7"
futures = "0.3"
lazy_static = "1.4"
libsqlite3-sys = { version = "0.9.1", features = ["bundled"] }
log = "0.4"
r2d2 = "0.8"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
shlex = "0.1"
thiserror = "1.0"
tokio = { version = "0.2.11", features = ["time"] }
uuid = { version = "0.8", features = ["serde", "v4"] }

[dev-dependencies]
ya-sb-router = "0.1"
actix-rt = "1.0"
structopt = "0.3.7"
