[package]
name = "ya-activity"
version = "0.3.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"

[dependencies]
ya-core-model = { version = "^0.7", features = ["activity", "market"] }
ya-client-model = { version = "0.4", features = ["sgx"] }
ya-net = "0.2"
ya-persistence = "0.2"
ya-service-api = "0.1"
ya-service-api-interfaces = "0.1"
ya-service-api-web = "0.1"
ya-service-bus = "0.4"

actix-rt = "1.0"
actix-web = "3.2"
anyhow = "1.0"
bytes = "0.5"
chrono = "0.4"
diesel = { version = "1.4", features = ["chrono", "sqlite", "r2d2"] }
diesel_migrations = "1.4"
env_logger = "0.7"
futures = "0.3"
hex = "0.4"
metrics="0.12"
lazy_static = "1.4"
libsqlite3-sys = { version = "0.9.1", features = ["bundled"] }
log = "0.4"
mime = "0.3.16"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shlex = "0.1"
thiserror = "1.0"
tokio = { version = "0.2.11", features = ["time"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
structopt = "0.3.7"

[dev-dependencies]
ya-sb-router = "0.4"


