[package]
name = "ya-activity"
version = "0.4.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2021"

[dependencies]
ya-core-model = { workspace = true, features = ["activity", "market"] }
ya-client-model = { workspace = true, features = ["sgx"] }
ya-net.workspace = true
ya-persistence.workspace = true
ya-service-api.workspace = true
ya-service-api-interfaces.workspace = true
ya-service-api-web.workspace = true
ya-service-bus = { workspace = true }
ya-gsb-http-proxy = { path = "../../exe-unit/components/gsb-http-proxy" }

actix-web = "4"
actix-http = "3"
anyhow = "1.0"
chrono = "0.4"
diesel = { version = "1.4", features = ["chrono", "sqlite", "r2d2"] }
diesel_migrations = "1.4"
env_logger = "0.7"
futures = "0.3"
hex = { workspace = true }
metrics = "0.12"
lazy_static = "1.4"
libsqlite3-sys = { workspace = true }
log = "0.4"
mime.workspace = true
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shlex = "0.1"
thiserror = "1.0"
tokio = { version = "1", features = ["time"] }
tokio-stream = "0.1.6"
uuid = { version = "0.8", features = ["serde", "v4"] }
structopt = "0.3.7"
async-stream = "0.3.5"

[dev-dependencies]
ya-sb-router = { workspace = true }

actix-rt = "2.7"
