[package]
name = "ya-appkey"
version = "0.1.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"
build = "build.rs"

[dependencies]
ya-core-model = { version = "0.1", features = ["appkey"] }
ya-persistence = "0.1"
ya-service-api = "0.1"
ya-service-bus = "0.1"

anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["sqlite", "r2d2", "chrono"] }
futures = "0.3"
log = "0.4"
r2d2 = "0.8"
serde_json = "1.0"
structopt = "0.3"
thiserror = "1.0"
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
actix = "0.8"
futures = { version = "0.3", features = ["compat"] }
lazy_static = "1.4"

[target.'cfg(target_env = "msvc")'.build-dependencies]
vcpkg = "0.2"