[package]
name = "gftp"
version = "0.1.1"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"

[dependencies]
ya-client-model = "0.1"
ya-compile-time-utils = "0.1"
ya-core-model = { version = "0.1", features = ["gftp", "identity"] }
ya-net = "0.1"
ya-service-api = "0.1"
ya-service-api-derive = "0.1"
ya-service-api-interfaces = "0.1"
ya-service-bus = "0.2"

actix-rt = "1.0"
anyhow = "1.0"
digest = "0.8.1"
dotenv = "0.15.0"
env_logger = "0.7.1"
futures = "0.3"
log = "0.4.8"
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.8.2"
structopt = "0.3.9"
thiserror = "1.0.20"
tokio = { version = "0.2", features = ["io-std", "time"] }
url = { version = "2.1.1", features = ["serde"] }

[dev-dependencies]
tempdir = "0.3.7"
tokio = { version = "0.2", features = ["process"] }
