[package]
name = "gftp"
version = "0.4.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"
homepage = "https://github.com/golemfactory/yagna"
repository = "https://github.com/golemfactory/yagna"
license = "LGPL-3.0"
description="Golem File Transfer Protocol"
keywords=["golem", "yagna"]

[features]
default=[]
bin=['env_logger', 'dotenv']

[[bin]]
name="gftp"
required-features=['bin']

[dependencies]
ya-compile-time-utils = "0.2"
ya-core-model = { version = "^0.9", features = ["gftp", "identity", "net"] }
ya-service-bus = { version = "0.6.3" }

actix-rt = "2.7"
anyhow = "1.0"
digest = "0.8.1"
dotenv = { version = "0.15.0", optional = true }
env_logger = { version = "0.7.1", optional = true }
futures = "0.3"
log = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.8.2"
structopt = "0.3.9"
thiserror = "1.0.20"
tokio = { version = "1", features = ["io-std", "time"] }
url = { version = "2.1.1", features = ["serde"] }

[dev-dependencies]
dotenv = { version = "0.15.0" }
env_logger = { version = "0.7.1" }
sha3 = "0.8.2"
tempdir = "0.3.7"
tokio = { version = "1", features = ["process"] }

[build-dependencies]
