[package]
name = "ya-gsb-api"
version = "0.1.0"
description = "API for binding to Golem Service Bus services"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"

[dependencies]
ya-persistence = "0.3"
ya-service-api = "0.1"
ya-service-api-interfaces = "0.2"
ya-service-api-web = "0.2"
ya-service-bus = "0.6"

actix-web = "4"
actix-http = "3"
anyhow = "1"
log = "0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"