[package]
name = "ya-gsb-api"
version = "0.1.0"
description = "API for binding to Golem Service Bus services"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"

[dependencies]
ya-persistence = "0.3"
ya-service-api = "0.1"
ya-service-api-interfaces = "0.2"
ya-service-api-web = "0.2"
ya-service-bus = "0.6"
ya-core-model = { version = "0.8", features = ["gftp"] }

actix = "0"
actix-web = "4"
actix-web-actors = "4"
actix-http = "3"
anyhow = "1"
log = "0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["default"] }
lazy_static = "1"
thiserror = "1"
uuid = { version = "1.2.2", features = ["v4"] }
futures = "0.3"
base64 = "0"
flexbuffers = { git = "https://github.com/pwalski/flatbuffers", branch="public_address" }
bytes = "1"
tokio = "1"
async-trait = "0.1"