[package]
name = "ya-gsb-api"
version = "0.1.0"
description = "API for binding to Golem Service Bus services"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"

[dependencies]
ya-client-model = "0.5"
ya-persistence = "0.3"
ya-service-api = "0.1"
ya-service-api-interfaces = "0.2"
ya-service-api-web = "0.2"
ya-service-bus = "0.6"

actix = "0"
actix-web = "4"
actix-web-actors = "4"
actix-http = "3"
anyhow = "1"
log = "0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["default"] }
lazy_static = "1"
thiserror = "1"
uuid = { version = "1.2.2", features = ["v4"] }
futures = "0.3"
base64 = "0"
flexbuffers = "2"
bytes = "1"
tokio = "1"

[dev-dependencies]
ya-core-model = { version = "0.8", features = ["gftp"] }
actix-test = "0.1"
awc = "3"
env_logger = "0.10"