[package]
name = "gsb-http-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ya-service-bus = { path = "/home/skrotki/golem/ya-service-bus" }

thiserror = "1.0.51"
serde = { version = "1.0.193", features = ["derive"] }
chrono = "0.4"