[package]
name = "ya-identity"
version = "0.3.0"
description = "Yagna identity management"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"

[dependencies]
ya-client-model = { version = "0.5", features = ["with-diesel"] }
ya-core-model = { version = "^0.9", features = ["identity", "appkey"] }
ya-persistence = "0.3"
ya-service-api = "0.1"
ya-service-api-interfaces = "0.2"
ya-service-bus = "0.6.1"


aes = "0.8"
anyhow = "1.0"
appdirs = "0.2"
chrono = { version = "0.4", features = ["serde"] }
ctr = "0.9.2"
ctrlc = "3.2"
diesel = { version = "1.4", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "1.4"
digest = "0.10.7"
eth-keystore = "0.5.0"
ethsign = "0.8"
hex = "0.4"
hmac = "0.12.1"
futures = "0.3"
log = "0.4"
pbkdf2 = "0.12.1"
promptly = "0.3.0"
r2d2 = "0.8.8"
rand = "0.8"
rpassword = "3.0.2"
serde_json = "1.0"
scrypt = "0.10"
sha2 = "0.10.6"
sha3 = "0.10.8"
structopt = "0.3"
thiserror = "1.0"
tokio = { version = "1", features = ["fs"] }
uuid = { version = "0.8", features = ["v4"] }
rustc-hex = "2.1.0"
yansi = "0.5.0"

[dev-dependencies]
ya-service-api-derive = "0.2"
ya-sb-router = "0.6.1"

actix-rt = "2.7"
actix-service = "2"
actix-web = "4"
awc = "3"
base64 = "0.12"
dotenv = "0.15"
env_logger = "0.7.1"
