[package]
name = "ya-market"
version = "0.3.0"
description = "The Distributed Marketplace implementation for Yagna."
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"

[features]
test-suite = []
bcast-singleton = []
testing = ["actix-http", "actix-rt", "actix-service", "env_logger"]

[dependencies]
ya-agreement-utils = { version = "^0.2"}
ya-diesel-utils = { version = "0.1" }
ya-client = "0.5"
ya-core-model = { version = "^0.3", features = ["market", "net"] }
ya-market-resolver = "0.2"
ya-net = "0.2"
ya-persistence = "0.2"
ya-service-api = "0.1"
ya-service-api-interfaces = "0.1"
ya-service-api-web = "0.1"
ya-service-bus = "0.4"
ya-std-utils = "0.1"
ya-utils-actix = "0.1"


actix = { version = "0.10", default-features = false }
actix-web = "3.2"
async-trait = { version = "0.1.33" }
anyhow = "1.0"
backtrace = "0.3.50"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99.5"
diesel = { version = "1.4", features = ["chrono", "sqlite", "r2d2"] }
diesel_migrations = "1.4"
digest = "0.8.1"
futures = "0.3"
hex = "0.4"
humantime = "2.0.0"
lazy_static = "1.4"
libsqlite3-sys = { version = "0.9.1", features = ["bundled"] }
log = "0.4"
metrics="0.12"
num-derive = "0.3"
num-traits = "0.2"
r2d2 = "0.8"
rand = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.9"
structopt = "0.3.20"
strum = "0.19.5"
strum_macros = "0.19.4"
thiserror = "1.0"
tokio = { version = "0.2", features = ["time", "sync"] }
uuid = { version = "0.8", features = ["v4"] }

# testing
actix-http = { version = "2.2", optional = true }
actix-rt = { version = "1.0.0", optional = true }
actix-service = { version = "1.0", optional = true }
env_logger = { version = "0.7", optional = true }
regex = "1.4.2"

[dev-dependencies]
ya-market = { path = ".", features = ["testing"] }

all_asserts = "2.2.0"
serde_json = "1.0"
#serial_test = "0.5.0"
serial_test = { git = "https://github.com/tworec/serial_test.git", branch = "actix_rt_test"}
structopt = "0.3"
tokio = { version = "0.2", features = ["macros", "rt-core"] }
