[package]
name = "ya-metrics"
version = "0.1.0"
description="Yagna metrics service"
keywords=["golem", "yagna", "metrics"]
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"
homepage = "https://github.com/golemfactory/yagna"
repository = "https://github.com/golemfactory/yagna"
license = "LGPL-3.0"

[dependencies]
ya-core-model = { version = "^0.4", features = ["identity"] }
ya-service-api = "0.1"
ya-service-api-interfaces = "0.1"
ya-service-bus = "0.4"

actix-web = { version = "3", features = ["openssl"] }
anyhow = "1.0.32"
bigdecimal = "0.2"
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
metrics = "0.12"
metrics-core = "0.5.2"
metrics-runtime = "0.13.1"
percent-encoding = "2.1.0"
structopt = "0.3"
tokio = { version = "0.2", features = ["time", "sync"] }
url = "2.1.1"
serde = "1.0"
serde_json = "1.0"