[package]
name = "ya-metrics"
version = "0.2.0"
description="Yagna metrics service"
keywords=["golem", "yagna", "metrics"]
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"
homepage = "https://github.com/golemfactory/yagna"
repository = "https://github.com/golemfactory/yagna"
license = "LGPL-3.0"

[dependencies]
ya-core-model = { version = "^0.9", features = ["identity"] }
ya-service-api = "0.1"
ya-service-api-interfaces = "0.2"
ya-service-bus = { path = "/home/skrotki/golem/ya-service-bus" }

awc = "3"
actix-web = { version = "4", features = ["openssl"] }
anyhow = "1.0.32"
bigdecimal = "0.2"
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
metrics = "0.16"
metrics-core = "0.5.2"
metrics-runtime = { version = "0.13.1", default-features = false, features = ["observers"] }
percent-encoding = "2.1.0"
structopt = "0.3"
tokio = { version = "1", features = ["time", "sync"] }
url = "2.1.1"
